# ChatSeekAI

./: README.md  docker-compose.yaml
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx
client/src/components/: ProtectedRoute.tsx
client/src/components/chat/: AppSideBar.tsx  ChatHeader.tsx  ChatInput.tsx  ChatItem.tsx  ChatScreen.tsx  ChatsList.tsx  MessageContent.tsx  MessageItem.tsx  MessagesLoadingScreen.tsx  NoChatScreen.tsx  OllamaModelsDropdown.tsx  StreamingMessage.tsx
client/src/hooks/: useAuth.ts  useChats.ts  useCurrentUser.ts  useLogin.ts  useLogout.ts  useMessages.ts  useOllama.ts  useRegister.ts
client/src/pages/: ChatsPage.tsx  LoginPage.tsx  RegisterPage.tsx
client/src/router/: index.tsx
client/src/schemas/: index.ts
client/src/services/: api.ts  authService.ts  chatService.ts  ollamaService.ts
client/src/types/: index.ts
server/: Dockerfile  pyproject.toml
server/app/: main.py
server/app/alembic/: env.py
server/app/alembic/versions/: 4fd717b24a64_initial_migration.py
server/app/api/v1/: auth.py  chat.py  message.py  ollama.py  user.py
server/app/core/: config.py  database.py  dependencies.py
server/app/models/: chat.py  message.py  user.py
server/app/repositories/: base_repository.py  chat_repository.py  message_repository.py  user_repository.py
server/app/schemas/: auth.py  chat.py  message.py  ollama.py  user.py
server/app/services/: auth_service.py  chat_service.py  message_service.py  ollama_service.py
server/app/utils/: exceptions.py  security.py
(+2 files in other folders)
